@@ -1,4 +1,2 @@
 - module: couchbase
-  metricsets: ["bucket", "cluster", "node"]
-  period: 10s
   hosts: ["localhost:8091"]
