@@ -272,7 +272,8 @@ https://github.com/elastic/beats/compare/v6.0.0-beta2...master[Check the HEAD di
 - Set `namespace` as default metricset in Aerospike module. {pull}6669[6669]
 - Set `service` as default metricset in Windows module. {pull}6675[6675]
 - Set all metricsets as default metricsets in uwsgi module. {pull}6688[6688]
-- Mark kubernetes.event metricset as beta. {pull}[]
+- Mark kubernetes.event metricset as beta. {pull}6715[6715]
+- Set all metricsets as default metricsets in couchbase module. {pull}6683[6683]
 
 *Packetbeat*
 
